cmake_minimum_required(VERSION 3.10)
set(CMAKE_SYSTEM_NAME Generic)
set(CMAKE_CXX_COMPILER g++)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "-std=c++17 -Wall -Wextra -Wshadow")
set(CMAKE_CXX_FLAGS_DEBUG "-O0 -g3 -fsanitize=undefined -D_GLIBCXX_DEBUG")
set(CMAKE_CXX_FLAGS_RELEASE "-O3")
project(CacheObliviousAlgorithms CXX)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
include_directories("include")

add_subdirectory(thirdparty/googletest/googletest)
function(add_test src_name)
  set(test_name ${src_name}_test)
  add_executable(${test_name} test/${test_name}.cpp)
  target_link_libraries(${test_name} gtest_main pthread)
  target_include_directories(${test_name} PUBLIC thirdparty/gtest/googletest/include)  
endfunction(add_test)

add_executable(main main.cpp)
add_executable(summation example/summation.cpp)
add_executable(median example/median.cpp)
add_executable(b_tree example/b_tree.cpp)
add_executable(static_search example/static_search.cpp)

add_test(safe_array)
add_test(data_cache)
add_test(b_tree)
