cmake_minimum_required(VERSION 3.15)
set(CMAKE_SYSTEM_NAME Generic)
set(CMAKE_CXX_COMPILER g++)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "-std=c++17 -Wall -Wextra -Wshadow")
set(CMAKE_CXX_FLAGS_DEBUG "-O0 -g3 -fsanitize=undefined -D_GLIBCXX_DEBUG")
set(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG")
project(CacheObliviousAlgorithms CXX)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
include_directories("include")

add_subdirectory(thirdparty/googletest/googletest)

function(add_test test_name src_names)
  set(src_files ${src_names})
  list(TRANSFORM src_files PREPEND "src/")
  list(TRANSFORM src_files APPEND ".cpp")
  add_executable(${test_name} test/${test_name}.cpp ${src_files})
  target_link_libraries(${test_name} gtest_main pthread)
  target_include_directories(${test_name} PUBLIC thirdparty/gtest/googletest/include)  
endfunction(add_test)

function(add_example example_name src_names)
  set(src_files ${src_names})
  list(TRANSFORM src_files PREPEND "src/")
  list(TRANSFORM src_files APPEND ".cpp")
  add_executable(${example_name} example/${example_name}.cpp ${src_files})
endfunction(add_example)

add_example(scanning data_cache)
add_example(median data_cache)
add_example(static_search data_cache)

add_test(data_cache_test data_cache)
